2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_string_widget_changed): Use
	actual signature for the changed signal
	Use gconf_client rather than gconf_engine

2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_color_value_changed): Use a
	local stack variable for the color rather than a pointer. Duh.
	(peditor_select_menu_widget_changed): Use
	gtk_option_menu_get_history
	(peditor_select_menu_widget_changed): Accept option_menu as
	parameter
	(gconf_peditor_new_select_menu): Connect changed signal rather
	than activate signal on the menu items
	(gconf_property_editor_get_key): Implement
	(peditor_color_widget_changed): Use correct signature for the
	signal handler
	(peditor_select_menu_value_changed): Use
	gtk_option_menu_set_history
	(guard_value_changed, gconf_peditor_widget_set_guard): Implement
	(peditor_string_widget_changed): Work correctly with multiple
	callback signatures
	(gconf_peditor_new_string): Use changed signal

2001-12-08  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_*_widget_changed): Don't call
	gconf_value_free

2001-12-07  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (gconf_property_editor_class_init): Use
	correct ordering of setup
	(gconf_peditor_new_*): Terminate the parameter list passed to
	g_object_new with NULL
	(gconf_property_editor_class_init): Make the changeset property a
	pointer
	(gconf_property_editor_set_prop): Use g_value_get_object for the
	destroy notify object
	(peditor_*_value_changed): Make sure value is non-NULL

2001-11-03  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (libcommon_a_SOURCES): Added gconf-property-editor.[ch]

2001-10-27  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (get_default_moniker): Switch to gconf: moniker
	(capplet_init): Remove legacy file hack

2001-10-18  Bradford Hovinen  <hovinen@ximian.com>
